syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "GrpcClient.Protos";

package product;

service ProductService {
  rpc GetProductById (common.GrpcBaseRequestWithIdParameter) returns (GetProductByIdResponse);
  rpc GetPagedListProduct (GetPagedListProductRequest) returns (GetPagedListProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (common.GrpcBaseResultWithIntData);
  rpc UpdateProduct (UpdateProductRequest) returns (common.GrpcBaseResult);
  rpc DeleteProduct (common.GrpcBaseRequestWithIdParameter) returns (common.GrpcBaseResult);
}

message GetPagedListProductRequest {
  string name = 1;
  int32 pageNumber = 2;
  int32 pageSize = 3;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string barCode = 3;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  double price = 3;
  string barCode = 4;
}

message GetProductByIdResponse {
  bool success = 1;
  repeated common.GrpcError errors = 2;
  ProductModel data = 3;
}

message GetPagedListProductResponse {
  bool success = 1;
  repeated common.GrpcError errors = 2;
  repeated ProductModel data = 3;
  int32 pageNumber = 4;
  int32 pageSize = 5;
  int32 totalPages = 6;
  int32 totalItems = 7;
}

message ProductModel {
  int64 id = 1;
  string name = 2;
  double price = 3;
  string barCode = 4;
  string createdDateTime = 5;
}
